# ChangeLog for app-office/libreoffice-bin
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice-bin/ChangeLog,v 1.69 2012/05/13 16:12:15 dilfridge Exp $

*libreoffice-bin-3.5.2.2-r1 (13 May 2012)

  13 May 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +libreoffice-bin-3.5.2.2-r1.ebuild:
  Fresh x86 binpackages for icu-49

  09 May 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-bin-3.5.2.2.ebuild:
  Shutup repoman.

  09 May 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-bin-3.5.2.2.ebuild:
  Add elog information about -java, base will not be working

  06 May 2012; Agostino Sarubbo <ago@gentoo.org>
  libreoffice-bin-3.5.2.2.ebuild:
  Stable for amd64, wrt bug #411449

  05 May 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-bin-3.5.2.2.ebuild:
  Use correct blockers.

  04 May 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-bin-3.5.2.2.ebuild:
  Use curl version we actually built against

  30 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  libreoffice-bin-3.5.2.2.ebuild:
  We really need ~dev-libs/icu-4.8.1.1, bug 414103

  27 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  libreoffice-bin-3.5.2.2.ebuild:
  Fresh amd64 binpackages...

*libreoffice-bin-3.5.2.2 (25 Apr 2012)

  25 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +libreoffice-bin-3.5.2.2.ebuild:
  Fresh x86 binpackages...

  02 Mar 2012; Agostino Sarubbo <ago@gentoo.org>
  libreoffice-bin-3.4.5.2-r1.ebuild:
  Stable for amd64, wrt bug #398521

  29 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-bin-3.4.5.2-r1.ebuild:
  Depend on urw-fonts which provide nimbus.

  29 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-bin-3.4.5.2-r1.ebuild:
  Add debug useflag and reword cups warning to match non-bin pkg.

  27 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-bin-3.4.5.2-r1.ebuild:
  Reduce if condition to oneliner. Less code++
