@@ -420,16 +420,22 @@ DIST LibO_3.3.4_Linux_x86_langpack-rpm_zh-CN.tar.gz 1980478 RMD160 ad53613193a2f
 DIST LibO_3.3.4_Linux_x86_langpack-rpm_zh-TW.tar.gz 1969168 RMD160 056f5f75703dfedd386ba4d5cb718557b6cb5fc9 SHA1 3cca9faf7fac2fb4ed42ae26945723448c680420 SHA256 2f008d1fd1aaf25074836ab22df97af4e4e962f05ad7c3749040baefd9c03db8
 DIST LibO_3.3.4_Linux_x86_langpack-rpm_zu.tar.gz 1915795 RMD160 8cca07c2b4fd0c7a3d961573e814a4cf3454ae80 SHA1 cf5a527107146db679a355c5e572fdfb755e6e80 SHA256 f8a07db55ec78fb605823680cde2cc2dead4243fca8581dbb94541cb324419fb
 DIST amd64-bin-libreoffice-base-3.4.5.2-r1.tbz2 102456784 RMD160 01884c87c01696efdbb8d325bd0945b3c592030e SHA1 9813ec75f1fc1c891c33c860cbe69191e179b496 SHA256 917ef76018c1da257963a5eaf6e3616885551f497c995d8bfb7213a0eeb6498e
+DIST amd64-bin-libreoffice-base-3.5.2.2-r1.tar.xz 76731392 RMD160 c3b07343855dc773f8e7a648506e8d9463c185ee SHA1 b961f399485b47ba7a40c166f487209c2e5c3ee3 SHA256 f035abc428d818324687219d6202860d21998d46143560bbe0993839d0b65e46
 DIST amd64-bin-libreoffice-base-3.5.2.2.tar.xz 76765788 RMD160 0f5f8dbff4eeb5e33cd83b93f7b4c2de9a149806 SHA1 3b60cf73b7e801798b68275ef9a23aafe875b04d SHA256 1ca580568cee46a1402e4af587e5031deca2ebc48274e2fe9b3743296b33e459
 DIST amd64-bin-libreoffice-base-java-3.4.5.2-r1.tbz2 106370003 RMD160 74a10408f77736a880ed796d4ca57e0166f20e90 SHA1 50ea9a599ed9fbc31b2f9650d73dca2a2323241c SHA256 58bce9c40926386449084e73c3b4cd598bf4fc5015906b200e8d196dda90ed91
+DIST amd64-bin-libreoffice-base-java-3.5.2.2-r1.tar.xz 81440504 RMD160 c066c7bbfafbeba03363ac9fe8ddc44a15d61d4d SHA1 0d7a668eae7d3e6c127d8a20d6ca039d207d62dc SHA256 313c9fd16354a81112d1657d9d430cc927098438de4c7e228b377f0f818e5279
 DIST amd64-bin-libreoffice-base-java-3.5.2.2.tar.xz 81475080 RMD160 78d313c4309b88bdf46e963de6cbb855bf3ba6d7 SHA1 00cd1d2a99dd6d371ec920a665f1fb46c9cc9797 SHA256 b6bd7c15f1836d6fd432e12009223f6f9c3c2ed00d4f727dfe413584cbc12313
 DIST amd64-bin-libreoffice-gnome-3.4.5.2-r1.tbz2 102603395 RMD160 e5a11ffbaa373039e5895086cdbbaaf64d25fccf SHA1 23533db8705ada814f02007533a0ce15f57763bb SHA256 5461681fb66925e14be303b80c10cf8f0b5f944807af6407ff857e3cc634f28b
+DIST amd64-bin-libreoffice-gnome-3.5.2.2-r1.tar.xz 76817660 RMD160 98eaa1aca03048195027ec5d3051d951d233ab8f SHA1 116b7a112f159688b6a52fa80b018c8bcb6c3357 SHA256 9d04311af03a60a6a301d5e2050c72b19fb54922ef35f9b4d7a6810672fc9cc6
 DIST amd64-bin-libreoffice-gnome-3.5.2.2.tar.xz 76874040 RMD160 4c186500fd38ea1ab68c3c3df58f4de24cb0d398 SHA1 b845fa80eaa4c764154c5b50743291e4dd8c8e17 SHA256 824014b4dc876147ed995694858a1cd56510b725489d573ef517955a7f115f0b
 DIST amd64-bin-libreoffice-gnome-java-3.4.5.2-r1.tbz2 106295303 RMD160 d5f5cd2d8093ba68ae0f9fd72c60ef51eb69d990 SHA1 82b243b67a8856fe3450d30cf471a48f9e23f1e1 SHA256 4ceaeca7b6be516f85cf00835fc5412c1eda080e63b9d9c50b054e3ad0ab231b
+DIST amd64-bin-libreoffice-gnome-java-3.5.2.2-r1.tar.xz 81538372 RMD160 b9bd431b5c4b792e2ec8808258fef3f5819023b2 SHA1 a7a9c64a69097d741d0714b895589e3232b38dbd SHA256 0603666dcd5e6470229dbc02e5d6b17c9198b09e207b9bb9f3c7b7d1fc37eaed
 DIST amd64-bin-libreoffice-gnome-java-3.5.2.2.tar.xz 81569680 RMD160 df44918b8b37ede864b07a32d00f7487966210d2 SHA1 d10d37a2dbdce0e1d7089735fe09615de57de8b2 SHA256 b2f71da13f5c0739cc033b926d4f65850f46471dd606a0db8edb5a9e54803b5f
 DIST amd64-bin-libreoffice-kde-3.4.5.2-r1.tbz2 102494764 RMD160 ec10478a64f9a865190da2239f1f07c1a55d5d18 SHA1 d5bc68bc52880dc8baca1cd4e57b55f166a4f0fd SHA256 6d273dbb937272e8f72fb0079d53abc587a905ac2e132ec35072b9a4f93e2049
+DIST amd64-bin-libreoffice-kde-3.5.2.2-r1.tar.xz 76779216 RMD160 6b5c6593ad8c039b2576d0689edd4d61021a9a5a SHA1 f7d4e0fa15809bb95df2c7e75dc78ab0eef69a59 SHA256 de947e14e6f346a42f16f78817077d5b60b756bd2a77fe72f26dce6bdc45f881
 DIST amd64-bin-libreoffice-kde-3.5.2.2.tar.xz 76831244 RMD160 0230ffc3e7c29e5d93562061ceaf6fb59a916dbb SHA1 c5074f39c78b62c6b78042aa40f39d5de248b174 SHA256 1034a8392f4dd0dd5ac307fdc001ef08a96ade9604b704eb572ff12095798338
 DIST amd64-bin-libreoffice-kde-java-3.4.5.2-r1.tbz2 106330946 RMD160 76e5a8e83eb48e0b993a4480e3c7ade268fefd19 SHA1 64cdea01d776775f80f6636860a4ef5f075277f9 SHA256 7951e2179159fbc923fe0f0e95b9e4d114090804354f452a2a40f535d1586275
+DIST amd64-bin-libreoffice-kde-java-3.5.2.2-r1.tar.xz 81495140 RMD160 38fca629d3d0b85574f42285a0c800f11410346b SHA1 6aa9e4477fc503e113b79ae362309a8e82398538 SHA256 70c101456291256724c50e0106a8b4ebf5396b8f3a0ee507d67cc7f18ddfcf30
 DIST amd64-bin-libreoffice-kde-java-3.5.2.2.tar.xz 81512684 RMD160 78333a355d5390c60ca34b45ad826c9eefda1e03 SHA1 59cf7b4b3e7c34d11a7495bbae43bf36c09af3e1 SHA256 ddf24652551eeff2c5fbb7ce25b7ae700f777d7f7d4d23d96292a3e08deba7cc
 DIST x86-bin-libreoffice-base-3.4.5.2-r1.tbz2 97362324 RMD160 91a5a13f4de38206eb94c8a877892203d5239289 SHA1 dc05aff135fb48311a90f4d28c8c8eed439dcc11 SHA256 957f63359711675fb1f91a74817a461f670d7fe62ab31d8226e87ae2e015250a
 DIST x86-bin-libreoffice-base-3.5.2.2-r1.tar.xz 74990852 RMD160 d4ff0d0c7f931476d3c751eeea0b3c05f0978ad1 SHA1 7ebe1a657f0226a2ea53fa3f9aa062abe5b3fb79 SHA256 1451d40b7e39be47711fd7886dae0d6e416ad3f6cf0825d90985a3925e981a38
@@ -451,24 +457,24 @@ DIST x86-bin-libreoffice-kde-java-3.5.2.2-r1.tar.xz 79732688 RMD160 e115e81b2c80
 DIST x86-bin-libreoffice-kde-java-3.5.2.2.tar.xz 79760512 RMD160 74053791be48f2e8feca385b7328e11165adfbf6 SHA1 7ec3b7d4cd80c78493f10e42adfdf4c0fc3a8304 SHA256 58bac7af8581050ffcdd606a8676eb2758499eec35b694a389d5913fcc9bb67b
 EBUILD libreoffice-bin-3.3.4.ebuild 6998 RMD160 9f03719ba63b9ea10af69581eaebf72e1f5cce16 SHA1 e9cb4f7109067cb2dfcc8cb6fa1aa4e2ef6b80fa SHA256 3336a25cc2729c56fa58ecadcb5d3adf7c5e1eeca1509f708d29ac10d3a79123
 EBUILD libreoffice-bin-3.4.5.2-r1.ebuild 4035 RMD160 1cbf5003f61cc561a072ac5e85ad3aa95315eee7 SHA1 e81083a633e816f670857ac6a4dfc3dd37c893b1 SHA256 521222b9054e7d466c82d3e90895444e61a842b007146557234093d043fea926
-EBUILD libreoffice-bin-3.5.2.2-r1.ebuild 4233 RMD160 8479d4d13752b0c9cbddf03202b7c4bf13558bca SHA1 e337a8d5aeb57e68c5ec60d28c49571f57c6ffd6 SHA256 c0a3f8287a61c198a9379094b1eb9847b6be14c62ab72a642a6c1aa46db47aa5
+EBUILD libreoffice-bin-3.5.2.2-r1.ebuild 4262 RMD160 b67d4c258929faf3be69f991f6940e0b00198586 SHA1 1817061f6a6e9955a6ea7b12042b4fbb6c3036fc SHA256 79c767e95d4f2d1b0cef9c955d2f618a2dcb2ee114a21416bbdae497672fbb44
 EBUILD libreoffice-bin-3.5.2.2.ebuild 4262 RMD160 f5eaa6406f40c96024ad03296806577c8fec56fe SHA1 fa239ec74ce68aa803ee5ca4b80579aa94a9df17 SHA256 1faf84c7a6673f44fb506cc4e258885cbc6360c09a8f0e1b8f2f3783d1871ff1
-MISC ChangeLog 11140 RMD160 dadf83ce3672955dd5130d534281e1238aed77d7 SHA1 03864d451eecd4a2c2efadbc87e064974c269e2d SHA256 7b415102a592926d2df47b9557d608ca6b19833e6eddecc1e2a3f6964fa805c1
+MISC ChangeLog 11272 RMD160 5087c8014077ef979dc7c5bbffe2d718e74ef56f SHA1 9c2f215230bf2366cba40566b9d4e1106a106ee7 SHA256 90bb0c296c7a969abf7548da6de878626c43fc8f869e129cac26f98c67933e2a
 MISC metadata.xml 474 RMD160 7104bf15d70449529df6259b71620443392a14e9 SHA1 a4055e99444213fea16f282b2fa7c25ec0b21be6 SHA256 b92b55b2aec0028aaac8afdb01f4b9ea416c8e00a2207dd8d0db317e4fad48b8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBCgAGBQJPr92MAAoJENwGBM22xffeIxAP/36OFYbia9GqZ7UvoUVNgxDF
-9nPwXlLWx9YZmcqIcJo7UC6h1ryuX9zPmUzyDLvn0onMPWm/taxq3crsiYQv4F2+
-6Wb0pR62hjRASKV46fK83oPZ0ettg7JHVcAZTh0IX2dxNO6atOdRxP5CbD0EZYao
-r3EuoXmA6c2ihcbv5j2438PHIHbcSOGup/emAibMgnRT7BYUbANpQgR0JCIiqhgw
-bcmjCsIJysM8Ly+C2P9scdODVzG0WiX8ChCu0BMdWyICXS+praOxqvuyx6hnSgJ7
-lfaWrz4uTEE2vcYlqEdpNjpxKcwm5oVkMAfmPLCbzu7N7/aGao47n5DWxxcWE+hN
-H6htZKn2QEphCsGuzSpcYDF6PXwQ4FMnoeECszqzT1IrgYPWL9++QjFLGVltNHMc
-ZOKy9WtKyrtAdd3iv+pMY7+D6B8zFfUUl6X2AFxETxKj/fUsuSkPbvse5oUVHzYO
-AZYxQR8Fi5dSypxBPnWC0grOjWdVocXmlf/6tvOHsc+sNK5dtUgtdKZMEZyu747K
-zoVYZmkxp6RzgBmI0P5zqQMOS0Jh7F/rL/vD+RYg3vqYU6phsQyd0DW0V3pTzzx+
-4V5McXq05RbsTruBbLa4WCjeJppv9qMji/8ZIHiW/r2DEhN1Kjb1jelNaeNMMq22
-UF2qDXVlzi2leRr8hhCp
-=H043
+iQIcBAEBCgAGBQJPsXtQAAoJENwGBM22xffeJe4QAIEpIrBIwvarrA40xe9ErUEM
+Qp59W1hKq/F3SxxtMO4gYk+1ckhGBilC+ZXqlPSArW5PLBDKEgWaS4f0yJa+0p9+
+GTCtHqH0kMWP/84RAK7AzWSd77uWnoz8NbptvEBsSxqksgQKatRhyc4NviB0s9VQ
+Ni7AlSJyTopYqUNWCXCOtQNk9WFvAZyEGN2Uy4EqvfyJvNJliQIIjY/Ph3sUQHA2
+y/qr+iszk4XXhvLIk6g9tdmXPO01fdT6Dnh5KSi6427Q8Qf+RDwEf+FxukqGEvwX
+edrJGlqGo6eH0DRkZ9vfqBT5GuAAxIdvNd/mpr3w8ql4xaDYHT6EKhc+X7EH1B6m
+nLXjwm7WA7v55wLJq/ZZrJz/QbCMBk59tOprH3Zcwuk1tMUB9feITHthxxEo3v4B
+X9BbcdFq36wpdNW3Dj0shhnInNZpYQxFVTgF37IeWy8hcCDeIvs60vTbtHt1/1eD
+bSIHHLvkloCznbxvfQKdQTfh9aK8BmYwxjcN6bf99ggo437zYRZPRArwtn4CmW0Z
+Uxn9VvgAxXjgP0LgDiDKkc9Ub5jrq8QxiiO/EEKvtIeVyZXymx4i+RWcUjecMO7d
+gDzNEavfDCgagMdUxi4mLhjlGdAK7KgT1JuaYARZ4N77Hp73SAMeduzBcRFOW6zn
+/L4pl6cjoX7nKn5SPuBN
+=0P3y
 -----END PGP SIGNATURE-----
