@@ -1,6 +1,10 @@
 # ChangeLog for app-office/libreoffice-bin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice-bin/ChangeLog,v 1.69 2012/05/13 16:12:15 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice-bin/ChangeLog,v 1.70 2012/05/14 21:37:38 dilfridge Exp $
+
+  14 May 2012; Andreas K. Huettel <dilfridge@gentoo.org>
+  libreoffice-bin-3.5.2.2-r1.ebuild:
+  Fresh amd64 binpackages for icu-49
 
 *libreoffice-bin-3.5.2.2-r1 (13 May 2012)
 
